Tests of DocumentsResources class (#826)
* test: create tests for DocumentsResources controllers

* test: add tests for DocuemntsResources

* refactor

* refactor: tests

* refactor: Sonar issue